--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="top-content">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="carousel-partner col-3">Unsere Partner:</div>
+                        <div class="carousel-partner col-12 col-sm-12 col-md-3 col-lg-3 ">Unsere Partner:</div>
                             <div id="carousel-example" class="carousel slide col-12 col-sm-12 col-md-9 col-lg-9" data-ride="carousel">
                                 <div class="carousel-inner row mx-auto" role="listbox">
 
