--- a/unternehmen.html
+++ b/unternehmen.html
@@ -16,7 +16,7 @@
         <!-- Third party plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/unternehmen.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -25,7 +25,7 @@
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">My First Job</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="unternhemen.html">Für Unternehmen</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Für Unternehmen</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Über uns</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Kontakt</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Einloggen</a></li>
