--- a/unternehmen.html
+++ b/unternehmen.html
@@ -95,6 +95,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">So einfach funktioniert es:</h2>
                 </div>
+                <hr class="divider my-4" />
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer1.jpg" alt="" /></div>
