Nav Bar Anpassung

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Über uns</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Kontakt</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Einloggen</a></li>
+                        <li class="btn btn-primary btn-md js-scroll-trigger" href="index.html">Sign Up here!</a></li>
                     </ul>
                 </div>
             </div>
