--- a/unternehmen.html
+++ b/unternehmen.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">Erstelle dein persönliches Profil und die Unternehmen bewerben sich bei Dir!</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lerne mehr hier</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Sign Up here!</a>
                     </div>
                 </div>
             </div>
