--- a/unternehmen.html
+++ b/unternehmen.html
@@ -37,13 +37,15 @@
         <header class="masthead">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">Finde den Job oder Ausbildung, den Du liebst!</h1>
-                        <hr class="divider my-4" />
-                    </div>
-                    <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Erstelle dein persönliches Profil und die Unternehmen bewerben sich bei Dir!</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Sign Up here!</a>
+                    <div class="container-fluid" id="headerbox">
+                        <div class="col-lg-10 mx-auto">
+                            <h1 class="text-uppercase text-white font-weight-bold">Finde den Job oder Ausbildung, den Du liebst!</h1>
+                            <hr class="divider my-4" />
+                        </div>
+                        <div class="col-lg-8 align-self-baseline mx-auto">
+                            <p class="text-white-75 font-weight-light mb-5">Erstelle dein persönliches Profil und die Unternehmen bewerben sich bei Dir!</p>
+                            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Sign Up here!</a>
+                        </div>
                     </div>
                 </div>
             </div>
