--- a/unternehmen.html
+++ b/unternehmen.html
@@ -39,12 +39,12 @@
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="container-fluid" id="headerbox">
                         <div class="col-lg-10 mx-auto">
-                            <h1 class="text-uppercase text-white font-weight-bold">Finde den Job oder Ausbildung, den Du liebst!</h1>
+                            <h1 class="text-uppercase text-white font-weight-bold">Top-Ausbildung gesucht?</h1>
                             <hr class="divider my-4" />
                         </div>
                         <div class="col-lg-8 align-self-baseline mx-auto">
-                            <p class="text-white-75 font-weight-light mb-5">Erstelle dein persönliches Profil und die Unternehmen bewerben sich bei Dir!</p>
-                            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Sign Up here!</a>
+                            <p class="text-white-75 font-weight-light mb-5">Erstelle Dein persönliches Profil! Wir coachen Dich und finden das Unternehmen, das am besten zu Dir passt!</p>
+                            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#manual">Sign Up here!</a>
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
         </div>
 
         <!-- Anleitung-->
-        <section class="page-section" id="about">
+        <section class="page-section" id="manual">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">So einfach funktioniert es:</h2>
@@ -142,6 +142,15 @@
                 </ul>
             </div>
         </section>
+
+        <section class="page-section bg-dark" id="about">
+            <div class="container">
+                <div class="row justify-content-center">
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="index.html">Sign Up here!</a>
+                </div>
+            </div>
+        </section>
+
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
