--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">My First Job</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -39,19 +39,19 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">Finde den Job oder Ausbildung, den Du liebst!</h1>
+                        <h1 class="text-uppercase text-white font-weight-bold">Finde den Job, den Du liebst!</h1>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Erstelle dein persönliches Profil und die Unternehmen bewerben sich bei Dir!</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lerne mehr hier</a>
+                        <p class="text-white-90 font-weight-light mb-5">Erstelle dein persönliches Profil und wir finden ein Top-Unternehmen für Deien Ausbildung!</p>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#manual">Lerne mehr hier</a>
                     </div>
                 </div>
             </div>
         </header>
 
         <!-- Anleitung-->
-        <section class="page-section" id="about">
+        <section class="page-section" id="manual">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">So einfach funktioniert es:</h2>
@@ -63,7 +63,7 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading">Erstelle dein Profil</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">und lass uns wissen welche neuen Herausforderungen Du suchst – es dauert weniger als fünf Minuten.</p></div>
+                            <div class="timeline-body"><p class="text-dark">und lass uns wissen welche neuen Herausforderungen Du suchst – es dauert weniger als fünf Minuten.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -72,7 +72,7 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading">Werde Teil der Community</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Durchlaufe unseren Code Check und nimm ein optionales Gespräch mit deinem Talent Success Advisor wahr, der dich persönlich unterstützt, damit du die besten Job Angebote erhälst.</p></div>
+                            <div class="timeline-body"><p class="text-dark">Durchlaufe unseren Code Check und nimm ein optionales Gespräch mit deinem Talent Success Advisor wahr, der dich persönlich unterstützt, damit du die besten Job Angebote erhälst.</p></div>
                         </div>
                     </li>
                     <li>
@@ -81,7 +81,7 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading">Werde sichtbar!</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Werde sichtbar auf Honeypot, damit Unternehmen Dein Profil finden und Dir Angebote mit Gehaltsangabe und Tech-Stack vorab machen können.</p></div>
+                            <div class="timeline-body"><p class="text-dark">Werde sichtbar auf Honeypot, damit Unternehmen Dein Profil finden und Dir Angebote mit Gehaltsangabe und Tech-Stack vorab machen können.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -90,20 +90,18 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading">Hol Dir den Job</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Führe Interviews mit Unternehmen, die Dich interessieren! Wähle das Unternehmen, das Dir am besten gefällt.</p></div>
+                            <div class="timeline-body"><p class="text-dark">Führe Interviews mit Unternehmen, die Dich interessieren! Wähle das Unternehmen, das Dir am besten gefällt.</p></div>
                         </div>
                     </li>
                 </ul>
             </div>
-        </section>
-
-        <section class="page-section bg-primary" id="about">
             <div class="container">
                 <div class="row justify-content-center">
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="index.html">Sign Up here!</a>
-                </div>
             </div>
         </section>
+
+
 
                 <!-- Slider -->
         <div class="c-carousel">
