--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Über uns</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Kontakt</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Einloggen</a></li>
-                        <li class="btn btn-primary btn-md js-scroll-trigger" href="index.html">Sign Up here!</a></li>
+                        <li class="btn btn-outline-light js-scroll-trigger" href="index.html">Sign Up here!</a></li>
                     </ul>
                 </div>
             </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="container">
                 <div class="row justify-content-center">
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="index.html">Sign Up here!</a>
+                        <a class="btn btn-primary btn-lg js-scroll-trigger" href="index.html" id="signbtn">Sign Up here!</a>
             </div>
         </section>
 
