--- a/index.html
+++ b/index.html
@@ -54,43 +54,43 @@
         <section class="page-section" id="manual">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">So einfach funktioniert es:</h2>
+                    <h2 class="section-heading text-uppercase text-light">So einfach funktioniert es:</h2>
                 </div>
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer1.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">Erstelle dein Profil</h4>
+                                <h4 class="subheading text-light">Erstelle dein Profil</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-dark">und lass uns wissen welche neuen Herausforderungen Du suchst – es dauert weniger als fünf Minuten.</p></div>
+                            <div class="timeline-body"><p class="text-light">und lass uns wissen welche neuen Herausforderungen Du suchst – es dauert weniger als fünf Minuten.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer2.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">Werde Teil der Community</h4>
+                                <h4 class="subheading text-light">Werde Teil der Community</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-dark">Durchlaufe unseren Code Check und nimm ein optionales Gespräch mit deinem Talent Success Advisor wahr, der dich persönlich unterstützt, damit du die besten Job Angebote erhälst.</p></div>
+                            <div class="timeline-body"><p class="text-light">Durchlaufe unseren Code Check und nimm ein optionales Gespräch mit deinem Talent Success Advisor wahr, der dich persönlich unterstützt, damit du die besten Job Angebote erhälst.</p></div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer3.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">Werde sichtbar!</h4>
+                                <h4 class="subheading text-light">Werde sichtbar!</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-dark">Werde sichtbar auf Honeypot, damit Unternehmen Dein Profil finden und Dir Angebote mit Gehaltsangabe und Tech-Stack vorab machen können.</p></div>
+                            <div class="timeline-body"><p class="text-light">Werde sichtbar auf Honeypot, damit Unternehmen Dein Profil finden und Dir Angebote mit Gehaltsangabe und Tech-Stack vorab machen können.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer4.jpg" alt="" /></div>
                         <div class="timeline-panel">
-                            <div class="timeline-heading">
+                            <div class="timeline-heading text-light">
                                 <h4 class="subheading">Hol Dir den Job</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-dark">Führe Interviews mit Unternehmen, die Dich interessieren! Wähle das Unternehmen, das Dir am besten gefällt.</p></div>
+                            <div class="timeline-body"><p class="text-light">Führe Interviews mit Unternehmen, die Dich interessieren! Wähle das Unternehmen, das Dir am besten gefällt.</p></div>
                         </div>
                     </li>
                 </ul>
