--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 <div class="row justify-content-center">
                         <a class="btn btn-primary btn-lg js-scroll-trigger" href="index.html" id="signbtn">Sign Up here!</a>
             </div>
+            <hr class="divider my-4" />
         </section>
 
 
