--- a/users/login.html
+++ b/users/login.html
@@ -18,7 +18,7 @@
             <h1 class="card-title text-center" id="signIn">Sign In</h1>
             <form class="form-signin">
               <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
                 <label for="inputEmail"></label>
               </div>
 
