--- a/unternehmen.html
+++ b/unternehmen.html
@@ -95,52 +95,55 @@
         <section class="page-section" id="manual">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">So einfach funktioniert es:</h2>
+                    <h2 class="section-heading text-uppercase text-light">So einfach funktioniert es:</h2>
                 </div>
-                <hr class="divider my-4" />
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer1.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">Erstelle dein Profil</h4>
+                                <h4 class="subheading text-light">Erstelle dein Profil</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">und lass uns wissen welche neuen Herausforderungen Du suchst – es dauert weniger als fünf Minuten.</p></div>
+                            <div class="timeline-body"><p class="text-light">Lass‘ uns wissen, was Du beruflich gerne machen möchtest. Beschreib‘ uns Deine persönlichen Interessen und Stärken. Teil‘ uns mit, wann Du Deinen Schulabschluss machen wirst und lade Deine letzten Zeugnisse hoch.<br> Alle Angaben werden von uns streng vertraulich behandelt. Zeitbedarf: Weniger als eine halbe Stunde. Nachdem Du Dein Profil erstellt hast, nehmen wir mit Dir Kontakt auf, um Dir wichtige Tipps zu geben, wie Du Dein Profil noch verbessern kannst. </p>
+                            </div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer2.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">Werde Teil der Community</h4>
+                                <h4 class="subheading text-light">Finde den Ausbildungsberuf, den Du liebst! </h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Durchlaufe unseren Code Check und nimm ein optionales Gespräch mit deinem Talent Success Advisor wahr, der dich persönlich unterstützt, damit du die besten Job Angebote erhälst.</p></div>
+                            <div class="timeline-body"><p class="text-light">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Bist Du eher der an Zahlen interessierte Typ oder möchtest Du Deine kreativen Interessen verwirklichen? Bist Du handwerklich interessiert und begabt oder suchst Du eine Ausbildung in einem sozialen Beruf?<br>Mit unserem großen Berufe-Check helfen wir Dir dabei, den Ausbildungsberuf zu finden, der zu Dir passt. Nachdem Du den Berufe-Check absolviert hast, bekommt Du von uns Vorschläge für Ausbildungsberufe, die aus unserer Sicht für Dich besonders geeignet sind.  </p>
+                            </div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer3.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">Werde sichtbar!</h4>
+                                <h4 class="subheading text-light">Mach‘ den Praxis-Check!</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Werde sichtbar auf Honeypot, damit Unternehmen Dein Profil finden und Dir Angebote mit Gehaltsangabe und Tech-Stack vorab machen können.</p></div>
+                            <div class="timeline-body"><p class="text-light">Beantworte fünf Fragen im Online-Interview zu jedem von uns vorgeschlagenen Ausbildungsberuf, für den Du Dich interessierst. Du erfährst sofort, ob Deine Stärken und Deine Interessen für diesen Ausbildungsberuf besonders vorteilhaft sind. Sollte das nicht der Fall sein, schlagen wir Dir weitere Ausbildungsberufe vor.</p>
+                            </div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer4.jpg" alt="" /></div>
                         <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading">Hol Dir den Job</h4>
+                            <div class="timeline-heading text-light">
+                                <h4 class="subheading">Lass Dich zu einem Bewerbungsgespräch einladen!</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Führe Interviews mit Unternehmen, die Dich interessieren! Wähle das Unternehmen, das Dir am besten gefällt.</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/ende.jpg" alt="" /></div>
+                            <div class="timeline-body"><p class="text-light">Wenn wir den richtigen Ausbildungsberuf für Dich gefunden haben, sprechen wir aktiv die besten Firmen und Unternehmen aus Deiner Region an. Diese Firmen senden Dir eine Kurzbeschreibung ihres Unternehmens und der betreffenden Ausbildung zu. Wenn Du Interesse an einer Ausbildungsstelle hast, vermitteln wir ein Bewerbungsgespräch.</p></div>
                         </div>
                     </li>
                 </ul>
             </div>
+            <div class="container">
+                <div class="row justify-content-center">
+                        <a class="btn btn-primary btn-lg js-scroll-trigger" href="index.html" id="signbtn">Sign Up here!</a>
+            </div>
+            <hr class="divider my-4" />
         </section>
 
         <section class="page-section bg-dark" id="about">
