--- a/unternehmen.html
+++ b/unternehmen.html
@@ -104,7 +104,7 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading text-dark">Erstelle dein Profil</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Lass‘ uns wissen, was Du beruflich gerne machen möchtest. Beschreib‘ uns Deine persönlichen Interessen und Stärken. Teil‘ uns mit, wann Du Deinen Schulabschluss machen wirst und lade Deine letzten Zeugnisse hoch.<br> Alle Angaben werden von uns streng vertraulich behandelt. Zeitbedarf: Weniger als eine halbe Stunde. Nachdem Du Dein Profil erstellt hast, nehmen wir mit Dir Kontakt auf, um Dir wichtige Tipps zu geben, wie Du Dein Profil noch verbessern kannst. </p>
+                            <div class="timeline-body"><p class="text-dark">Lass‘ uns wissen, was Du beruflich gerne machen möchtest. Beschreib‘ uns Deine persönlichen Interessen und Stärken. Teil‘ uns mit, wann Du Deinen Schulabschluss machen wirst und lade Deine letzten Zeugnisse hoch.<br> Alle Angaben werden von uns streng vertraulich behandelt. Zeitbedarf: Weniger als eine halbe Stunde. Nachdem Du Dein Profil erstellt hast, nehmen wir mit Dir Kontakt auf, um Dir wichtige Tipps zu geben, wie Du Dein Profil noch verbessern kannst. </p>
                             </div>
                         </div>
                     </li>
@@ -114,7 +114,7 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading text-dark">Finde den Ausbildungsberuf, den Du liebst! </h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Bist Du eher der an Zahlen interessierte Typ oder möchtest Du Deine kreativen Interessen verwirklichen? Bist Du handwerklich interessiert und begabt oder suchst Du eine Ausbildung in einem sozialen Beruf?<br>Mit unserem großen Berufe-Check helfen wir Dir dabei, den Ausbildungsberuf zu finden, der zu Dir passt. Nachdem Du den Berufe-Check absolviert hast, bekommt Du von uns Vorschläge für Ausbildungsberufe, die aus unserer Sicht für Dich besonders geeignet sind.  </p>
+                            <div class="timeline-body"><p class="text-dark">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Bist Du eher der an Zahlen interessierte Typ oder möchtest Du Deine kreativen Interessen verwirklichen? Bist Du handwerklich interessiert und begabt oder suchst Du eine Ausbildung in einem sozialen Beruf?<br>Mit unserem großen Berufe-Check helfen wir Dir dabei, den Ausbildungsberuf zu finden, der zu Dir passt. Nachdem Du den Berufe-Check absolviert hast, bekommt Du von uns Vorschläge für Ausbildungsberufe, die aus unserer Sicht für Dich besonders geeignet sind.  </p>
                             </div>
                         </div>
                     </li>
@@ -124,7 +124,7 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading text-dark">Mach‘ den Praxis-Check!</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Beantworte fünf Fragen im Online-Interview zu jedem von uns vorgeschlagenen Ausbildungsberuf, für den Du Dich interessierst. Du erfährst sofort, ob Deine Stärken und Deine Interessen für diesen Ausbildungsberuf besonders vorteilhaft sind. Sollte das nicht der Fall sein, schlagen wir Dir weitere Ausbildungsberufe vor.</p>
+                            <div class="timeline-body"><p class="text-dark">Beantworte fünf Fragen im Online-Interview zu jedem von uns vorgeschlagenen Ausbildungsberuf, für den Du Dich interessierst. Du erfährst sofort, ob Deine Stärken und Deine Interessen für diesen Ausbildungsberuf besonders vorteilhaft sind. Sollte das nicht der Fall sein, schlagen wir Dir weitere Ausbildungsberufe vor.</p>
                             </div>
                         </div>
                     </li>
@@ -134,7 +134,7 @@
                             <div class="timeline-heading text-dark">
                                 <h4 class="subheading">Lass Dich zu einem Bewerbungsgespräch einladen!</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Wenn wir den richtigen Ausbildungsberuf für Dich gefunden haben, sprechen wir aktiv die besten Firmen und Unternehmen aus Deiner Region an. Diese Firmen senden Dir eine Kurzbeschreibung ihres Unternehmens und der betreffenden Ausbildung zu. Wenn Du Interesse an einer Ausbildungsstelle hast, vermitteln wir ein Bewerbungsgespräch.</p></div>
+                            <div class="timeline-body"><p class="text-dark">Wenn wir den richtigen Ausbildungsberuf für Dich gefunden haben, sprechen wir aktiv die besten Firmen und Unternehmen aus Deiner Region an. Diese Firmen senden Dir eine Kurzbeschreibung ihres Unternehmens und der betreffenden Ausbildung zu. Wenn Du Interesse an einer Ausbildungsstelle hast, vermitteln wir ein Bewerbungsgespräch.</p></div>
                         </div>
                     </li>
                 </ul>
