--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="unternehmen.html">Für Unternehmen</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Über uns</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Kontakt</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="users/login.html">Einloggen</a></li>
-                        <li class="btn btn-outline-light js-scroll-trigger" href="index.html">Sign Up here!</a></li>
+                        <li class="btn btn-outline-light js-scroll-trigger" href="index.html">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -38,11 +37,12 @@
         <header class="masthead">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-10 align-self-end">
+                    <div class="container-fluid" id="headerbox">
+                        <div class="col-lg-10 mx-auto">
                         <h1 class="text-uppercase text-white font-weight-bold">Finde den Job, den Du liebst!</h1>
                         <hr class="divider my-4" />
                     </div>
-                    <div class="col-lg-8 align-self-baseline">
+                    <div class="col-lg-8 align-self-baseline mx-auto">
                         <p class="text-white-90 font-weight-light mb-5">Erstelle dein persönliches Profil und wir finden ein Top-Unternehmen für Deine Ausbildung!</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#manual">Lerne mehr hier</a>
                     </div>
@@ -100,7 +100,7 @@
             </div>
             <div class="container">
                 <div class="row justify-content-center">
-                        <a class="btn btn-primary btn-lg js-scroll-trigger" href="index.html" id="signbtn">Sign Up here!</a>
+                        <a class="btn btn-primary btn-lg js-scroll-trigger" href="index.html" id="signbtn">Login</a>
             </div>
             <hr class="divider my-4" />
         </section>
