--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="container-fluid" id="headerbox">
                         <div class="col-lg-10 mx-auto">
-                        <h1 class="text-uppercase text-white font-weight-bold">Finde den Job, den Du liebst!</h1>
+                        <h1 class="text-uppercase text-white font-weight-bold">Finde die Ausbildung, die Du liebst!</h1>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline mx-auto">
