--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="unternehmen.html">Für Unternehmen</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Über uns</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Kontakt</a></li>
-                        <li class="btn btn-outline-light js-scroll-trigger" href="index.html">Login</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="users/login.html">Login</a></li>
                     </ul>
                 </div>
             </div>
