--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
             <div class="container">
                 <div class="row justify-content-center">
-                        <a class="btn btn-primary btn-lg js-scroll-trigger" href="index.html" id="signbtn">Login</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="index.html" id="signbtn">Login</a>
             </div>
             <hr class="divider my-4" />
         </section>
