--- a/index.html
+++ b/index.html
@@ -44,11 +44,51 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline mx-auto">
                         <p class="text-white-90 font-weight-light mb-5">Erstelle dein persönliches Profil und wir finden ein Top-Unternehmen für Deine Ausbildung!</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#manual">Lerne mehr hier</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Das bieten wir Ihnen</a>
                     </div>
                 </div>
             </div>
         </header>
+
+        <!--Marketing Box-->
+
+        <section class="page-section" id="services">
+            <div class="container">
+                <h2 class="text-center mt-0">Services:</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Berufswahltest</h3>
+                            <p class="text-muted mb-0">Durch einen effektiven Berufswahltest können wir Dir genau sagen, welche Ausbildungen am besten zu Dir passen!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-comment-dots text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Interviews</h3>
+                            <p class="text-muted mb-0">Durch Interviews wollen wir, und damit dein zukünftiger Arbeitgeber, dich kennen lernen, da wir verstehen, dass Zahlen und Fakten nie eine Person ganz wiederspiegeln.  </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Coaching</h3>
+                            <p class="text-muted mb-0">Die ersten Jobinterviews können furcherregend sein. Unsere Coaches wollen Dir deine Angst nehmen und Dich bestmöglich auf ein Gespräch vorbereiten. Sie sind außerdem stets für Dich erreichbar, falls es doch Probleme geben sollte.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-thumbs-up text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Wir machen die Arbeit für Dich!</h3>
+                            <p class="text-muted mb-0">Keine lästigen Bewerbungen mehr. Wir kontaktieren die besten Firmen für Dich und stellen Dich vor, so dass Du dich auf wichtigere Dinge konzentrieren kannst.</p>
+                        </div>
+                    </div>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" id="btnManual" href="#manual">Lernen Sie mehr hier</a>
+                </div>
+            </div>
+        </section>
 
         <!-- Anleitung-->
         <section class="page-section" id="manual">
