--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <!--Marketing Box-->
 
         <section class="page-section" id="services">
-            <div class="container">
-                <h2 class="text-center mt-0">Services:</h2>
+            <div class="container text-center">
+                <h2 class="section-heading text-uppercase text-dark">Services:</h2>
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
@@ -85,7 +85,11 @@
                             <p class="text-muted mb-0">Keine lästigen Bewerbungen mehr. Wir kontaktieren die besten Firmen für Dich und stellen Dich vor, so dass Du dich auf wichtigere Dinge konzentrieren kannst.</p>
                         </div>
                     </div>
-                    <a class="btn btn-primary btn-xl js-scroll-trigger" id="btnManual" href="#manual">Lernen Sie mehr hier</a>
+                </div>                
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" id="btnManual" href="#manual">Lernen Sie mehr hier</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -140,7 +144,8 @@
             </div>
             <div class="container">
                 <div class="row justify-content-center">
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="index.html" id="signbtn">Login</a>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="users/login.html" id="signbtn">Registration</a>
+                </div>
             </div>
             <hr class="divider my-4" />
         </section>
