--- a/users/login.html
+++ b/users/login.html
@@ -15,7 +15,7 @@
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card card-signin my-5" >
           <div class="card-body">
-            <h1 class="card-title text-center" id="signIn">Sign In</h1>
+            <h1 class="card-title text-center" id="signIn">Login</h1>
             <form class="form-signin">
               <div class="form-label-group">
                 <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
