--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="container-fluid" id="headerbox">
                         <div class="col-lg-10 mx-auto">
-                        <h1 class="text-uppercase text-white font-weight-bold">Finde die Ausbildung, die Du liebst!</h1>
+                        <h1 class="text-uppercase text-white font-weight-bold">Starte die Ausbildung, die Du liebst!</h1>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline mx-auto">
-                        <p class="text-white-90 font-weight-light mb-5">Erstelle dein persönliches Profil und wir finden ein Top-Unternehmen für Deine Ausbildung!</p>
+                        <p class="text-white-90 font-weight-light mb-5">Wir helfen Dir bei Berufswahl und Bewerbung und finden das beste Unternehmen für Deine Ausbildung! </p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Das bieten wir Ihnen</a>
                     </div>
                 </div>
