--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <section class="page-section" id="services">
             <div class="container text-center">
-                <h2 class="section-heading text-uppercase text-dark">Services:</h2>
+                <h2 class="section-heading text-uppercase text-dark">Was nur wir für Dich tun!</h2>
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
