--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline mx-auto">
-                        <p class="text-white-90 font-weight-light mb-5">Wir helfen Dir bei Berufswahl und Bewerbung und finden das <br> beste  Unternehmen für Deine Ausbildung! </p>
+                        <p class="text-white-90 font-weight-light mb-5">Wir helfen Dir bei Berufswahl und Bewerbung und finden das <br> beste  Unternehmen für Deine Ausbildung! Kostenlos und streng vertaulich. </p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Das bieten wir Dir</a>
                     </div>
                 </div>
