--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>                
                 <div class="container">
                     <div class="row justify-content-center">
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" id="btnManual" href="#manual">Lernen Sie mehr hier</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" id="btnManual" href="#manual">So funktioniert's</a>
                     </div>
                 </div>
             </div>
