--- a/index.html
+++ b/index.html
@@ -60,35 +60,35 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Berufswahltest</h3>
-                            <p class="text-muted mb-0">Durch einen effektiven Berufswahltest können wir Dir genau sagen, welche Ausbildungen am besten zu Dir passen!</p>
+                            <h3 class="h4 mb-2">Finde Deine Stärken</h3>
+                            <p class="text-muted mb-0"></p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-comment-dots text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Interviews</h3>
-                            <p class="text-muted mb-0">Durch Interviews wollen wir, und damit dein zukünftiger Arbeitgeber, dich kennen lernen, da wir verstehen, dass Zahlen und Fakten nie eine Person ganz wiederspiegeln.  </p>
+                            <h3 class="h4 mb-2">Lass Dich coachen</h3>
+                            <p class="text-muted mb-0">Unsere erfahrenen Karriere-Coaches helfen Dir bei der Erstellung eines Profils und bereiten Dich bestmöglich auf ein Vorstellungsgespräch vor. Sie sind immer erreichbar, wenn Du Fragen oder Probleme hast.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Coaching</h3>
-                            <p class="text-muted mb-0">Die ersten Jobinterviews können furcherregend sein. Unsere Coaches wollen Dir deine Angst nehmen und Dich bestmöglich auf ein Gespräch vorbereiten. Sie sind außerdem stets für Dich erreichbar, falls es doch Probleme geben sollte.</p>
+                            <h3 class="h4 mb-2">Erhalte Jobangebote</h3>
+                            <p class="text-muted mb-0">Ab jetzt bewerben sich Unternehmen bei Dir! Wir kontaktieren die besten Unternehmen aus der Region und präsentieren Dich von Deiner besten Seite.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-thumbs-up text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Wir machen die Arbeit für Dich!</h3>
-                            <p class="text-muted mb-0">Keine lästigen Bewerbungen mehr. Wir kontaktieren die besten Firmen für Dich und stellen Dich vor, so dass Du dich auf wichtigere Dinge konzentrieren kannst.</p>
+                            <h3 class="h4 mb-2">Werde belohnt</h3>
+                            <p class="text-muted mb-0">Unsere Hilfe ist für Dich absolut kostenlos. Sobald Du einen Ausbildungsvertrag unterschreibst, bekommst Du sogar eine attraktive Prämie.</p>
                         </div>
                     </div>
                 </div>                
                 <div class="container">
                     <div class="row justify-content-center">
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" id="btnManual" href="#manual">So funktioniert's</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" id="btnManual" href="#manual">Und so einfach geht es</a>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
         <section class="page-section" id="manual">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase text-light">So einfach funktioniert es:</h2>
+                    <h2 class="section-heading text-uppercase text-light">So funktioniert es:</h2>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -107,7 +107,8 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading text-light">Erstelle dein Profil</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Lass‘ uns wissen, was Du beruflich gerne machen möchtest. Beschreib‘ uns Deine persönlichen Interessen und Stärken. Teil‘ uns mit, wann Du Deinen Schulabschluss machen wirst und lade Deine letzten Zeugnisse hoch.<br> Alle Angaben werden von uns streng vertraulich behandelt. Zeitbedarf: Weniger als eine halbe Stunde. Nachdem Du Dein Profil erstellt hast, nehmen wir mit Dir Kontakt auf, um Dir wichtige Tipps zu geben, wie Du Dein Profil noch verbessern kannst. </p>
+                            <div class="timeline-body"><p class="text-light">Wir benötigen deine Adresse und deine Kontaktdaten. Teile uns mit, wann Du deinen Schulabschluss machen wirst und lade dein letztes Zeugniss hoch. Beschreib uns deine persönlichen Interessen und Stärken.
+                            ! Alle Angaben werden streng vertraulich behandelt. Du benötigst weniger als eine halbe Stunde dafür. Wir machen Dir Vorschläge, wie Du Dein Profil noch verbessern kannst. </p>
                             </div>
                         </div>
                     </li>
@@ -115,9 +116,10 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer2.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading text-light">Finde den Ausbildungsberuf, den Du liebst! </h4>
+                                <h4 class="subheading text-light">Berufswahltest</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Bist Du eher der an Zahlen interessierte Typ oder möchtest Du Deine kreativen Interessen verwirklichen? Bist Du handwerklich interessiert und begabt oder suchst Du eine Ausbildung in einem sozialen Beruf?<br>Mit unserem großen Berufe-Check helfen wir Dir dabei, den Ausbildungsberuf zu finden, der zu Dir passt. Nachdem Du den Berufe-Check absolviert hast, bekommt Du von uns Vorschläge für Ausbildungsberufe, die aus unserer Sicht für Dich besonders geeignet sind.  </p>
+                            <div class="timeline-body"><p class="text-light">Check‘ mit uns, welche Tätigkeiten Dir Spaß machen. Mit unserem großen Berufswahl-Test finden wir diejenigen Ausbildungsberufe, die gut zu Dir passen.  
+                            ! Auch die Ergebnisse dieses Berufswahl-Tests sind streng vertraulich. Du benötigst weniger als eine halbe Stunde dafür.</p>
                             </div>
                         </div>
                     </li>
@@ -127,7 +129,8 @@
                             <div class="timeline-heading">
                                 <h4 class="subheading text-light">Mach‘ den Praxis-Check!</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Beantworte fünf Fragen im Online-Interview zu jedem von uns vorgeschlagenen Ausbildungsberuf, für den Du Dich interessierst. Du erfährst sofort, ob Deine Stärken und Deine Interessen für diesen Ausbildungsberuf besonders vorteilhaft sind. Sollte das nicht der Fall sein, schlagen wir Dir weitere Ausbildungsberufe vor.</p>
+                            <div class="timeline-body"><p class="text-light">Du beantwortest in einem Online-Interview speziell für diesen Ausbildungsberuf wichtige Fragen und erfährst unmittelbar, ob Du dafür besonders geeignet bist. Falls wir uns nicht sicher sind, schlagen wir Dir weitere Ausbildungsberufe vor. 
+                            ! Du brauchst weniger als eine Stunde pro Interview. Die Interviews und deren Ergebnisse werden streng vertraulich behandelt. Unsere Coaches beraten Dich hinsichtlich Deiner Möglichkeiten.</p>
                             </div>
                         </div>
                     </li>
@@ -135,16 +138,16 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/nummer4.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading text-light">
-                                <h4 class="subheading">Lass Dich zu einem Bewerbungsgespräch einladen!</h4>
+                                <h4 class="subheading">Jetzt kannst Du Dich entspannen</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-light">Wenn wir den richtigen Ausbildungsberuf für Dich gefunden haben, sprechen wir aktiv die besten Firmen und Unternehmen aus Deiner Region an. Diese Firmen senden Dir eine Kurzbeschreibung ihres Unternehmens und der betreffenden Ausbildung zu. Wenn Du Interesse an einer Ausbildungsstelle hast, vermitteln wir ein Bewerbungsgespräch.</p></div>
+                            <div class="timeline-body"><p class="text-light">Wir suchen nach den passenden Stellen für Dich. Du erhältst Anfragen von Unternehmen und entscheidest, welche für Dich in Frage kommen.</p></div>
                         </div>
                     </li>
                 </ul>
             </div>
             <div class="container">
                 <div class="row justify-content-center">
-                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="users/login.html" id="signbtn">Registration</a>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="users/login.html" id="signbtn">Jetzt anmelden</a>
                 </div>
             </div>
             <hr class="divider my-4" />
